# fake-keyboard

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE  README.md  conanfile.py
.github/: dependabot.yml
.github/workflows/: ci.yml
cmake/: fakekbdConfig.cmake.in
src/: main.cpp
src/libfakekbd/: config.cpp  config.hpp  fakekbd.hpp
src/libfakekbd/bluetooth/: adapter.cpp  adapter.hpp  dbus.cpp  dbus.hpp  l2cap.cpp  l2cap.hpp  sdp.cpp  sdp.hpp
src/libfakekbd/hid/: keyboard.cpp  keyboard.hpp  report.cpp  report.hpp  types.hpp
tasks/: todo.md
tests/: .clang-tidy  test_config.cpp  test_main.cpp  test_report.cpp  test_sdp.cpp
